Changes to round the values to 2 decimal places.